[package]
name = "ruina_index"
version = "1.0.0"
edition = "2021"
build = "build/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
phf = { version = "0.11.2", default-features = false }
ruina_common = { path = "../ruina_common", version = "1.0.0" }
ruina_reparser = { path = "../ruina_reparser", version = "1.0.0" }
strum = "0.25.0"
strum_macros = "0.25.0"

[build-dependencies]
phf = { version = "0.11.2", default-features = false }
phf_codegen = "0.11.2"
unidecode = "0.3.0"
roxmltree = "0.19.0"
ruina_common = { path = "../ruina_common", version = "1.0.0" }
ruina_reparser = { path = "../ruina_reparser", version = "1.0.0" }
rust-stemmers = "1.2.0"
strum = "0.25.0"
strum_macros = "0.25.0"